--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity
+            android:name=".activity.DealDetailActivity"
+            android:theme="@style/AppTheme"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".Screen1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
